fixed paragraph shift

--- a/public/style.css
+++ b/public/style.css
@@ -202,11 +202,16 @@ footer {
 }
 
 #word-loader {
+    position: absolute;
     margin-top: 39vh;
     font-size: var(--big-font);
     line-height: 200%;
     user-select: none;
-    padding-left: 10vw;
+    padding-left: 10.7vw;
     padding-right: 10vw;
-    padding-top: 32px;
+    padding-top: 38px;
+    height: 55vh;
+    overflow: scroll;
+    background: rgba(255, 122, 89, .0);
+    pointer-events: none;
 }
